# rust-just-learn

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
seeds/: query.sql
src/: main.rs  main.rs-backup
src/adapters/: auth_middleware.rs  dto.rs  dto_catagory.rs  dto_category.rs  dto_product.rs  dto_user.rs  http.rs  mod.rs  restapi.rs
src/adapters/restapi/: category.rs  mod.rs  product.rs  user.rs
src/domain/: catagory.rs  category.rs  error.rs  mod.rs  product.rs  user.rs
src/infra/: catagory_repository.rs  category_repository.rs  crypto.rs  http_trace.rs  jwt.rs  mod.rs  postgres.rs  product_repository.rs  telemetry.rs  user_repository.rs
src/infra/repository/: category.rs  mod.rs  product.rs
src/usecases/: catagory_service.rs  category_service.rs  mod.rs  product_service.rs  user_service.rs
