[package]
name = "rust-just-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }

thiserror = "1"
async-trait = "0.1"
dotenvy = "0.15.7"
